kubernetes/certbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: certbot
  name: certbot
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: certbot
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: certbot
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - trap exit TERM; while :; do certbot renew; sleep 12h & wait ${!}; done;
        image: certbot/certbot
        imagePullPolicy: ""
        name: certbot
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
